--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>RuralHealth</title>
+  <title>RuralCare</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
@@ -64,7 +64,7 @@ desired effect
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>R</b>HC</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Rural</b>Health</span>
+      <span class="logo-lg"><b>Rural</b>Care</span>
     </a>
 
     <!-- Header Navbar -->
@@ -81,10 +81,10 @@ desired effect
             <!-- Menu toggle button -->
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <i class="fa fa-envelope-o"></i>
-              <span class="label label-success">4</span>
+              <span class="label label-success">1</span>
             </a>
             <ul class="dropdown-menu">
-              <li class="header">You have 4 messages</li>
+              <li class="header">You have 1 messages</li>
               <li>
                 <!-- inner menu: contains the messages -->
                 <ul class="menu">
@@ -117,10 +117,10 @@ desired effect
             <!-- Menu toggle button -->
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <i class="fa fa-bell-o"></i>
-              <span class="label label-warning">2</span>
+              <span class="label label-warning">1</span>
             </a>
             <ul class="dropdown-menu">
-              <li class="header">You have 2 notifications</li>
+              <li class="header">You have 1 notifications</li>
               <li>
                 <!-- Inner Menu: contains the notifications -->
                 <ul class="menu">
@@ -203,10 +203,10 @@ desired effect
 
       <!-- Sidebar Menu -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="header">Your Health</li>
+        <li class="header">Home</li>
         <!-- Optionally, you can add icons to the links -->
         <li class="active"><a href="#"><i class="fa fa-circle text-danger"></i> </i> <span>Live View</span></a></li>
-        <li><a href="#"><i class="fa fa-link"></i> <span>Overview</span></a></li>
+        <li><a href="indexProvider.html"><i class="fa fa-link"></i> <span>CareGiver (for demo)</span></a></li>
         <li class="treeview">
           <a href="#"><i class="fa fa-link"></i> <span>Report</span>
             <span class="pull-right-container">
@@ -229,12 +229,12 @@ desired effect
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Dashboard
+        Live View
         <small></small>
       </h1>
       <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
-        <li class="active">Here</li>
+        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+        <li class="active">Live View</li>
       </ol>
     </section>
 
@@ -282,7 +282,7 @@ desired effect
 
             <div class="info-box-content">
               <span class="info-box-text">Emotion</span>
-              <span id="EmotionValue" class="info-box-number">760</span>
+              <span id="EmotionValue" class="info-box-number">Neutral</span>
             </div>
             <!-- /.info-box-content -->
           </div>
@@ -308,7 +308,7 @@ desired effect
         <div class="col-md-12">
           <div class="box">
             <div class="box-header with-border">
-              <h3 class="box-title">Monthly Recap Report</h3>
+              <h3 class="box-title">Live Report</h3>
 
               <div class="box-tools pull-right">
                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
@@ -357,7 +357,7 @@ desired effect
               </div>
               <!-- /.row -->
             </div>
-            
+
           </div>
           <!-- /.box -->
         </div>
